# wtf-tinymce

./: MANIFEST.in  README.md  README.rst  UPDATING.md  pyproject.toml  setup.py
example/: README.md  TEXT_COLORS.md  app.py  color_example.py  requirements.txt
example/templates/: color_example.html  index.html
wtf_tinymce/forms/: fields.py
wtf_tinymce/templates/wtf_tinymce/: editor.html
